--- a/todo-list/src/index.css
+++ b/todo-list/src/index.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--light-background-color: #fff;
+	--light-text-color: #333;
+	--dark-background-color: #333;
+	--dark-text-color: #fff;
+}
+
+body {
+	background-color: var(--light-background-color);
+	color: var(--light-text-color);
+}
+
+body.dark {
+	background-color: var(--dark-background-color);
+	color: var(--dark-text-color);
+}
+
 @layer base {
 	:root {
 		--background: 0 0% 100%;
