--- a/plusdev.net/src/index.css
+++ b/plusdev.net/src/index.css
@@ -2,21 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-	--light-background-color: #fff;
-	--light-text-color: #333;
-	--dark-background-color: #333;
-	--dark-text-color: #fff;
+* {
+	margin: 0;
+	padding: 0;
+	outline: 0;
 }
 
-body {
-	background-color: var(--light-background-color);
-	color: var(--light-text-color);
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: inherit;
+	font-feature-settings: inherit;
+	font-variation-settings: inherit;
+	font-size: 100%;
+	font-weight: inherit;
+	line-height: inherit;
+	color: inherit;
 }
 
-body.dark {
-	background-color: var(--dark-background-color);
-	color: var(--dark-text-color);
+button,
+select {
+	text-transform: none;
+}
+
+[type='button'],
+[type='reset'],
+[type='submit'],
+button {
+	-webkit-appearance: button;
+	background-color: transparent;
+	background-image: none;
 }
 
 @layer base {
@@ -89,5 +106,23 @@ body.dark {
 	}
 	body {
 		@apply bg-background text-foreground;
+	}
+}
+
+@layer utilities {
+	.no-focus:focus-visible {
+		--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+		--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+		box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+		--tw-ring-color: transparent !important;
+		--tw-ring-offset-width: 0px !important;
+	}
+
+	.h3-bold {
+		@apply text-[20px] font-bold leading-6;
+	}
+
+	.body-semibold {
+		font-weight: 600;
 	}
 }
