--- a/plusdev.net/src/index.css
+++ b/plusdev.net/src/index.css
@@ -1,128 +1,250 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-* {
-	margin: 0;
-	padding: 0;
-	outline: 0;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-	font-family: inherit;
-	font-feature-settings: inherit;
-	font-variation-settings: inherit;
-	font-size: 100%;
-	font-weight: inherit;
-	line-height: inherit;
-	color: inherit;
-}
-
-button,
-select {
-	text-transform: none;
-}
-
-[type='button'],
-[type='reset'],
-[type='submit'],
-button {
-	-webkit-appearance: button;
-	background-color: transparent;
-	background-image: none;
-}
-
 @layer base {
 	:root {
 		--background: 0 0% 100%;
 		--foreground: 222.2 84% 4.9%;
-
 		--card: 0 0% 100%;
 		--card-foreground: 222.2 84% 4.9%;
-
 		--popover: 0 0% 100%;
 		--popover-foreground: 222.2 84% 4.9%;
-
 		--primary: 222.2 47.4% 11.2%;
 		--primary-foreground: 210 40% 98%;
-
 		--secondary: 210 40% 96.1%;
 		--secondary-foreground: 222.2 47.4% 11.2%;
-
 		--muted: 210 40% 96.1%;
 		--muted-foreground: 215.4 16.3% 46.9%;
-
 		--accent: 210 40% 96.1%;
 		--accent-foreground: 222.2 47.4% 11.2%;
-
 		--destructive: 0 84.2% 60.2%;
 		--destructive-foreground: 210 40% 98%;
-
 		--border: 214.3 31.8% 91.4%;
 		--input: 214.3 31.8% 91.4%;
 		--ring: 222.2 84% 4.9%;
-
 		--radius: 0.5rem;
+		--bg-color: red;
+		--font-inter {
+			font-family: 'Inter', sans-serif;
+			font-optical-sizing: auto;
+			font-variation-settings: 'slnt' 0;
+		}
 	}
-
 	.dark {
 		--background: 222.2 84% 4.9%;
 		--foreground: 210 40% 98%;
-
 		--card: 222.2 84% 4.9%;
 		--card-foreground: 210 40% 98%;
-
 		--popover: 222.2 84% 4.9%;
 		--popover-foreground: 210 40% 98%;
-
 		--primary: 210 40% 98%;
 		--primary-foreground: 222.2 47.4% 11.2%;
-
 		--secondary: 217.2 32.6% 17.5%;
 		--secondary-foreground: 210 40% 98%;
-
 		--muted: 217.2 32.6% 17.5%;
 		--muted-foreground: 215 20.2% 65.1%;
-
 		--accent: 217.2 32.6% 17.5%;
 		--accent-foreground: 210 40% 98%;
-
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 210 40% 98%;
-
 		--border: 217.2 32.6% 17.5%;
 		--input: 217.2 32.6% 17.5%;
 		--ring: 212.7 26.8% 83.9%;
 	}
 }
-
 @layer base {
 	* {
 		@apply border-border;
 	}
 	body {
-		@apply bg-background text-foreground;
+		@apply bg-background text-foreground font-inter-normal;
 	}
 }
-
 @layer utilities {
-	.no-focus:focus-visible {
-		--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
-		--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
-		box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
-		--tw-ring-color: transparent !important;
-		--tw-ring-offset-width: 0px !important;
+	.font-inter-normal {
+		font-family: 'Inter', sans-serif;
+		font-optical-sizing: auto;
+		font-variation-settings: 'slnt' 0;
+		font-style: normal;
+		font-weight: normal;
 	}
-
+	.font-inter-bold {
+		font-family: 'Inter', sans-serif;
+		font-optical-sizing: auto;
+		font-style: normal;
+		font-weight: bolder;
+		font-variation-settings: 'slnt' 0;
+	}
+	.font-space-grotesk-normal {
+		font-family: 'Space Grotesk', sans-serif;
+		font-optical-sizing: auto;
+		font-weight: normal;
+		font-style: normal;
+	}
+	.font-space-grotesk-bold {
+		font-family: 'Space Grotesk', sans-serif;
+		font-optical-sizing: auto;
+		font-weight: bolder;
+		font-style: normal;
+	}
 	.h3-bold {
-		@apply text-[20px] font-bold leading-6;
+		@apply text-[20px] font-bold leading-[26px];
+	}
+	.h3-semibold {
+		@apply text-[20px] font-semibold leading-[24.8px];
+	}
+	.btn {
+		@apply bg-zinc-200 dark:bg-zinc-800;
+	}
+	.custom-scrollbar::-webkit-scrollbar {
+		width: 3px;
+		height: 3px;
+		border-radius: 2px;
+	}
+	.custom-scrollbar::-webkit-scrollbar-track {
+		background: #fff;
+	}
+	.custom-scrollbar::-webkit-scrollbar-thumb {
+		background-color: #888;
+		border-radius: 50px;
+	}
+	.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+		background-color: #555;
+		cursor: pointer;
+	}
+	.no-scroll::-webkit-scrollbar {
+		display: none;
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+	.no-focus {
+		@apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
+	}
+	.z-100 {
+		z-index: 100;
+	}
+	.primary-gradient {
+		background: linear-gradient(130deg, #eb2005 0%, #db5344 100%);
+	}
+	.primary-gradient-hover {
+		background: linear-gradient(130deg, #d42d16 0%, #f06f60 100%);
+	}
+	.btn {
+		@apply bg-zinc-200 dark:bg-zinc-800 !important;
+	}
+	.btn:hover {
+		@apply bg-zinc-300 dark:bg-zinc-700 !important;
+	}
+	.btn-secondary {
+		@apply bg-red-500 dark:bg-red-400 !important;
+	}
+	.btn-secondary:hover {
+		@apply bg-red-600 dark:bg-red-500 !important;
+	}
+	.btn-tertiary {
+		@apply bg-indigo-500 dark:bg-indigo-400 !important;
+	}
+	.btn-tertiary:hover {
+		@apply bg-indigo-600 dark:bg-indigo-500 !important;
+	}
+	.base-bold {
+		@apply text-[18px] font-bold leading-[140%];
+	}
+	.base-medium {
+		@apply text-[18px] font-medium leading-[25.2px];
+	}
+	.base-semibold {
+		@apply text-[18px] font-semibold leading-[25.2px];
+	}
+	.h1-bold {
+		@apply text-[30px] font-bold leading-[42px] tracking-tighter;
+	}
+	.h2-bold {
+		@apply text-[24px] font-bold leading-[31px];
+	}
+	.h2-semibold {
+		@apply text-[24px] font-semibold leading-[31px];
+	}
+	.h3-bold {
+		@apply text-[20px] font-bold leading-[26px];
+	}
+	.h3-semibold {
+		@apply text-[20px] font-semibold leading-[26px];
+	}
+	.paragraph-regular {
+		@apply text-[16px] font-normal leading-[22.5px];
+	}
+	.paragraph-medium {
+		@apply text-[16px] font-medium leading-[22.5px];
+	}
+	.paragraph-semibold {
+		@apply text-[16px] font-semibold leading-[22.5px];
+	}
+	.small-regular {
+		@apply text-[12px] font-normal leading-[15px];
+	}
+	.small-medium {
+		@apply text-[12px] font-medium leading-[15px];
+	}
+	.small-semibold {
+		@apply text-[12px] font-semibold leading-[15px];
+	}
+	.body-regular {
+		@apply text-[14px] font-normal leading-[19.5px];
+	}
+	.body-medium {
+		@apply text-[14px] font-medium leading-[18.5px];
+	}
+	.body-semibold {
+		@apply text-[14px] font-semibold leading-[18.5px];
+	}
+	.subtle-medium {
+		@apply text-[10px] font-medium leading-[13px];
+	}
+	.subtle-regular {
+		@apply text-[10px] font-normal leading-[13px];
 	}
 
-	.body-semibold {
-		font-weight: 600;
+	.article-content h2 {
+		@apply text-2xl font-semibold my-6;
+	}
+
+	.article-content h3 {
+		@apply text-xl font-semibold my-5;
+	}
+
+	.article-content h4 {
+		@apply text-lg font-semibold my-5;
+	}
+
+	.article-content h5 {
+		@apply text-base font-semibold my-4;
+	}
+
+	.article-content h6 {
+		@apply text-sm font-semibold my-4;
+	}
+
+	.article-content ul {
+		@apply list-inside list-disc;
+		margin: 1rem 0 1rem 1rem;
+	}
+
+	.article-content ol {
+		@apply list-inside list-decimal;
+		margin: 1rem 0 1rem 1rem;
+	}
+
+	.article-content p {
+		margin: 5px 0 15px 0;
+	}
+
+	.markdown code {
+		hyphens: auto;
+		-webkit-hyphens: auto;
+		-ms-hyphens: auto;
+		-moz-hyphens: auto;
+		padding: 2px;
+		color: #ff7000 !important;
 	}
 }
